--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             apiKey: "AIzaSyBMowosdHk3qp9cBSnc_M1uul7VLjJpJj4",
             authDomain: "streamit-d7e89.firebaseapp.com",
             projectId: "streamit-d7e89",
-            storageBucket: "streamit-d7e89.appspot.com", // Corrected storage bucket format
+           storageBucket: "streamit-d7e89.firebasestorage.app", // Corrected storage bucket format
             messagingSenderId: "770140743500",
             appId: "1:770140743500:web:4d041b6c923687022711e9",
             measurementId: "G-JPC9ZHKVR3"
