--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             apiKey: "AIzaSyBMowosdHk3qp9cBSnc_M1uul7VLjJpJj4",
             authDomain: "streamit-d7e89.firebaseapp.com",
             projectId: "streamit-d7e89",
-            storageBucket: "streamit-d7e89.firebasestorage.app",
+            storageBucket: "streamit-d7e89.firebasestorage.app", // Corrected
             messagingSenderId: "770140743500",
             appId: "1:770140743500:web:4d041b6c923687022711e9"
         };
