--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>PeerStream - Collaborative Screen Sharing</title>
+    <title>SuuStreams</title>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     
@@ -251,7 +251,7 @@
 <body>
     <div id="toast-container"></div>
     <div class="container">
-        <h1>PeerStream 📹</h1>
+        <h1>SuuStreams 📹</h1>
         <div class="main-content">
             <div class="screen-share-container">
                 <div id="screenShare" class="screen-placeholder"><span>Screen share will appear here</span></div>
